--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "express": "^4.19.2",
+    "html2canvas": "^1.4.1",
     "leaflet": "^1.9.4",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
