--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 # Authentication
 NEXT_PUBLIC_APP_NAME="KPF"
+NEXT_PUBLIC_APP_NAME_HEADER="KPF"
 NEXT_PUBLIC_APP_FULL_NAME="Koperasi Pemasaran Fadillah"
 NEXT_PUBLIC_APP_DIREKTUR="Lodewijk HF Lantang"
 NEXT_PUBLIC_APP_MANAJER_KEUANGAN="Lulu"
@@ -14,7 +15,7 @@ NEXT_PUBLIC_APP_LOGO="/assets/images/logo_kpf.jpg"
 NEXT_PUBLIC_APP_START_YEAR="2024"
 
 
-NEXT_PUBLIC_APP_VER="Testing"
+NEXT_PUBLIC_APP_VER="Production"
 NEXT_PUBLIC_APP_BG_TABLE="orange"
 NEXT_PUBLIC_APP_BG_BIO="green"
 NEXT_PUBLIC_APP_BG_UPLOAD="green"
@@ -22,13 +23,15 @@ NEXT_PUBLIC_APP_BG_MENU="white" #Jika bukan white wajib menggunakan -500 -> (ora
 NEXT_PUBLIC_APP_BG_DASHBOARD_HARI_INI="green"
 NEXT_PUBLIC_APP_BG_DASHBOARD_TOTAL="blue"
 NEXT_PUBLIC_APP_JUDUL_ANALISA="green"
+NEXT_PUBLIC_APP_BG_BUTTON="green"
+NEXT_PUBLIC_APP_PEMBULATAN=100
 
-NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL=http://localhost:5000
 NEXTAUTH_SECRET="eK0tliPmNCp82HCvyl23dL6PMzdrNtn8rB16atT4sAk="
 
 # Database
 DATABASE_URL="mysql://root:@localhost:3306/kpfdatabases"
-POSTGRES_URL_NON_POOLING="postgres://default:P94pzKQnZILX@ep-sweet-sky-93399409.ap-southeast-1.aws.neon.tech:5432/verceldb?sslmode=require"
+# POSTGRES_URL_NON_POOLING="postgres://default:P94pzKQnZILX@ep-sweet-sky-93399409.ap-southeast-1.aws.neon.tech:5432/verceldb?sslmode=require"
 
 # CLOUD_URL=cloudinary://195135263443877:R96aH0HzLqcqlzWa0YaOF79qSL0@dffx4fski 
 CLOUD_KEY=195135263443877
