--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "antd": "^5.14.2",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
+    "cssnano": "^7.0.4",
     "express": "^4.19.2",
     "html2canvas": "^1.4.1",
     "leaflet": "^1.9.4",
