--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "postinstall": "prisma generate",
-    "dev": "next dev",
+    "dev": "node index.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -22,6 +22,7 @@
     "antd": "^5.14.2",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "cssnano": "^7.0.4",
     "express": "^4.19.2",
     "html2canvas": "^1.4.1",
@@ -36,6 +37,7 @@
     "react-dom": "^18",
     "react-google-recaptcha": "^3.1.0",
     "react-leaflet": "^4.2.1",
+    "react-quill": "^2.0.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
