--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "postinstall": "prisma generate",
-    "dev": "next dev",
+    "dev": "node index.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -24,6 +24,7 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "cssnano": "^7.0.4",
+    "exceljs": "^4.4.0",
     "express": "^4.19.2",
     "html2canvas": "^1.4.1",
     "leaflet": "^1.9.4",
