--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@prisma/client": "^5.11.0",
     "@react-pdf/renderer": "^3.4.4",
     "angka-menjadi-terbilang": "^0.5.0",
-    "antd": "^5.14.2",
+    "antd": "^5.27.4",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
@@ -43,7 +43,9 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/exceljs": "^0.5.3",
     "@types/express": "^4.17.21",
+    "@types/html2canvas": "^0.5.35",
     "@types/leaflet": "^1.9.8",
     "@types/node": "^20",
     "@types/react": "^18",
